--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="container">
         <nav class="navbar navbar-default novbar-inverse novbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
